--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
-<!DOCTYPE HTML>
+
 <html>
-  <head>
-    <style>
-      body {
-        margin: 0px;
-        padding: 0px;
-      }
-    </style>
-  </head>
-  <body>
+<head>
+	<title>Game Of Thrones Bingo</title>
+	<link rel="stylesheet" rev="stylesheet" href="style.css" />
+	<script type="text/javascript" src="scripts/main.js">
+	</script>
+</head>
+<body>
     <img src="images/AGoTBanner.jpg" alt="My test image">
-    <script type="text/javascript" src="scripts/main.js"></script>
-  </body>
+<h1>Create A Bingo Card</h1>
+<table>
+	<tr>
+		<th width="25%">Who</th>
+		<th width="25%">Would</th>
+		<th width="25%">You</th>
+		<th width="25%">Kill</th>
+	</tr>
+	<tr>
+		<td id="square0">&nbsp;</td>
+		<td id="square1">&nbsp;</td>
+		<td id="square2">&nbsp;</td>
+		<td id="square3">&nbsp;</td>
+	</tr>
+	<tr>
+		<td id="square4">&nbsp;</td>
+		<td id="square5">&nbsp;</td>
+		<td id="square6">&nbsp;</td>
+		<td id="square7">&nbsp;</td>
+	</tr>
+	<tr>
+		<td id="square8">&nbsp;</td>
+		<td id="square9">&nbsp;</td>
+		<td id="square10">&nbsp;</td>
+		<td id="square11">&nbsp;</td>
+	</tr>
+	<tr>
+		<td id="square12">&nbsp;</td>
+		<td id="square13">&nbsp;</td>
+		<td id="square14">&nbsp;</td>
+		<td id="square15">&nbsp;</td>
+	</tr>
+</table>
+<p><a href="index.html" id="reload">Click here</a> to create a new card</p>
+</body>
 </html>
