made 3x3 grid, added style

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-
+<!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Game Of Thrones Bingo</title>
 	<link rel="stylesheet" rev="stylesheet" href="style.css" />
-	<script type="text/javascript" src="scripts/main.js">
-	</script>
-</head>
-<body>
+	<!-- <script type="text/javascript" src="scripts/main.js"/> -->
     <img src="images/AGoTBanner.jpg" alt="My test image">
-<h1>Create A Bingo Card</h1>
-<table>
+</head>
+<body style="background-color:#0000FF">
+<!-- <h1>Create A Bingo Card</h1> -->
+<!-- <table>
 	<tr>
 		<th width="25%">Who</th>
 		<th width="25%">Would</th>
@@ -40,7 +40,27 @@
 		<td id="square14">&nbsp;</td>
 		<td id="square15">&nbsp;</td>
 	</tr>
-</table>
-<p><a href="index.html" id="reload">Click here</a> to create a new card</p>
+</table> -->
+
+  <div class="grid-container">
+        <div class="grid-row">
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+        </div>
+        <div class="grid-row">
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+        </div>
+        <div class="grid-row">
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+        </div>
+      </div>
+
+
+<!-- <p><a href="index.html" id="reload">Click here</a> to create a new card</p> -->
 </body>
 </html>
