grid cells draggable, grid container and row not draggable. updated style sheet

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
 	</tr>
 </table> -->
 
-  <div class="grid-container">
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
+  <div class="grid-container" draggable="false">
+        <div class="grid-row" draggable="false">
+          <div class="grid-cell" draggable="true"></div>
+          <div class="grid-cell" draggable="true"></div>
+          <div class="grid-cell" draggable="true"></div>
         </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
+        <div class="grid-row" draggable="false">
+          <div class="grid-cell" draggable="true"></div>
+          <div class="grid-cell" draggable="true"></div>
+          <div class="grid-cell" draggable="true"></div>
         </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
+        <div class="grid-row" draggable="false">
+          <div class="grid-cell" draggable="true"></div>
+          <div class="grid-cell" draggable="true"></div>
+          <div class="grid-cell" draggable="true"></div>
         </div>
       </div>
 
