made placeholder for list on side

--- a/index.html
+++ b/index.html
@@ -59,7 +59,17 @@
           <div class="grid-cell" draggable="true"></div>
         </div>
       </div>
-
+  <div class="list-container" draggable="false">
+    <div class="list-row" draggable="false">
+      <div class="list-cell" draggable="true"></div>
+    </div>
+    <div class="list-row" draggable="false">
+      <div class="list-cell" draggable="true"></div>
+    </div>
+    <div class="list-row" draggable="false">
+      <div class="list-cell" draggable="true"></div>
+    </div>
+  </div>
 
 <!-- <p><a href="index.html" id="reload">Click here</a> to create a new card</p> -->
 </body>
