added styles directory, moved .css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Game Of Thrones Bingo</title>
-	<link rel="stylesheet" rev="stylesheet" href="style.css" />
+	<link rel="stylesheet" rev="stylesheet" href="styles/style.css" />
 	<!-- <script type="text/javascript" src="scripts/main.js"/> -->
     <img src="images/AGoTBanner.jpg" alt="My test image">
 </head>
