.gitattributes added, cells are img not div, cell src images added

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
 
   <div class="grid-container" draggable="false">
         <div class="grid-row" draggable="false">
-          <div class="grid-cell" draggable="true"></div>
-          <div class="grid-cell" draggable="true"></div>
-          <div class="grid-cell" draggable="true"></div>
+          <img class="grid-cell" src="images/cell1.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell2.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell3.png" draggable="true"></img>
         </div>
         <div class="grid-row" draggable="false">
-          <div class="grid-cell" draggable="true"></div>
-          <div class="grid-cell" draggable="true"></div>
-          <div class="grid-cell" draggable="true"></div>
+          <img class="grid-cell" src="images/cell4.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell5.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell6.png" draggable="true"></img>
         </div>
         <div class="grid-row" draggable="false">
-          <div class="grid-cell" draggable="true"></div>
-          <div class="grid-cell" draggable="true"></div>
-          <div class="grid-cell" draggable="true"></div>
+          <img class="grid-cell" src="images/cell7.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell8.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell9.png" draggable="true"></img>
         </div>
       </div>
   <div class="list-container" draggable="false">
