--- a/index.html
+++ b/index.html
@@ -44,19 +44,28 @@
 
   <div class="grid-container" draggable="false">
         <div class="grid-row" draggable="false">
-          <img class="grid-cell" src="images/cell1.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell2.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell3.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell01.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell02.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell03.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell04.png" draggable="true"></img>
         </div>
         <div class="grid-row" draggable="false">
-          <img class="grid-cell" src="images/cell4.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell5.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell6.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell05.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell06.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell07.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell08.png" draggable="true"></img>
         </div>
         <div class="grid-row" draggable="false">
-          <img class="grid-cell" src="images/cell7.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell8.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell9.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell09.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell10.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell11.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell12.png" draggable="true"></img>
+        </div>
+        <div class="grid-row" draggable="false">
+          <img class="grid-cell" src="images/cell13.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell14.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell15.png" draggable="true"></img>
+          <img class="grid-cell" src="images/cell16.png" draggable="true"></img>
         </div>
       </div>
   <div class="list-container" draggable="false">
