scrolling list added

--- a/index.html
+++ b/index.html
@@ -1,82 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>Game Of Thrones Bingo</title>
-	<link rel="stylesheet" rev="stylesheet" href="styles/style.css" />
-	<!-- <script type="text/javascript" src="scripts/main.js"/> -->
+    <meta charset="UTF-8">
+    <title>Game Of Thrones Bingo</title>
+    <link rel="stylesheet" rev="stylesheet" href="styles/style.css" />
+    <!-- <script type="text/javascript" src="scripts/main.js"/> -->
     <img src="images/AGoTBanner.jpg" alt="My test image">
 </head>
 <body style="background-color:#0000FF">
-<!-- <h1>Create A Bingo Card</h1> -->
-<!-- <table>
-	<tr>
-		<th width="25%">Who</th>
-		<th width="25%">Would</th>
-		<th width="25%">You</th>
-		<th width="25%">Kill</th>
-	</tr>
-	<tr>
-		<td id="square0">&nbsp;</td>
-		<td id="square1">&nbsp;</td>
-		<td id="square2">&nbsp;</td>
-		<td id="square3">&nbsp;</td>
-	</tr>
-	<tr>
-		<td id="square4">&nbsp;</td>
-		<td id="square5">&nbsp;</td>
-		<td id="square6">&nbsp;</td>
-		<td id="square7">&nbsp;</td>
-	</tr>
-	<tr>
-		<td id="square8">&nbsp;</td>
-		<td id="square9">&nbsp;</td>
-		<td id="square10">&nbsp;</td>
-		<td id="square11">&nbsp;</td>
-	</tr>
-	<tr>
-		<td id="square12">&nbsp;</td>
-		<td id="square13">&nbsp;</td>
-		<td id="square14">&nbsp;</td>
-		<td id="square15">&nbsp;</td>
-	</tr>
-</table> -->
-
   <div class="grid-container" draggable="false">
-        <div class="grid-row" draggable="false">
-          <img class="grid-cell" src="images/cell01.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell02.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell03.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell04.png" draggable="true"></img>
-        </div>
-        <div class="grid-row" draggable="false">
-          <img class="grid-cell" src="images/cell05.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell06.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell07.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell08.png" draggable="true"></img>
-        </div>
-        <div class="grid-row" draggable="false">
-          <img class="grid-cell" src="images/cell09.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell10.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell11.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell12.png" draggable="true"></img>
-        </div>
-        <div class="grid-row" draggable="false">
-          <img class="grid-cell" src="images/cell13.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell14.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell15.png" draggable="true"></img>
-          <img class="grid-cell" src="images/cell16.png" draggable="true"></img>
-        </div>
-      </div>
+    <div class="grid-row" draggable="false">
+      <img class="grid-cell" src="images/cell01.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell02.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell03.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell04.png" draggable="true"></img>
+    </div>
+    <div class="grid-row" draggable="false">
+      <img class="grid-cell" src="images/cell05.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell06.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell07.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell08.png" draggable="true"></img>
+    </div>
+    <div class="grid-row" draggable="false">
+      <img class="grid-cell" src="images/cell09.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell10.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell11.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell12.png" draggable="true"></img>
+    </div>
+    <div class="grid-row" draggable="false">
+      <img class="grid-cell" src="images/cell13.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell14.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell15.png" draggable="true"></img>
+      <img class="grid-cell" src="images/cell16.png" draggable="true"></img>
+    </div>
+  </div>
+
   <div class="list-container" draggable="false">
     <div class="list-row" draggable="false">
-      <div class="list-cell" draggable="true"></div>
+      <img class="list-cell" src="images/cell17.png" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <div class="list-cell" draggable="true"></div>
+      <img class="list-cell" src="images/cell18.png" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <div class="list-cell" draggable="true"></div>
+      <img class="list-cell" src="images/cell19.png" draggable="true"></img>
+    </div>
+    <div class="list-row" draggable="false">
+      <img class="list-cell" src="images/cell20.png" draggable="true"></img>
+    </div>
+    <div class="list-row" draggable="false">
+      <img class="list-cell" src="images/cell21.png" draggable="true"></img>
+    </div>
+    <div class="list-row" draggable="false">
+      <img class="list-cell" src="images/cell22.png" draggable="true"></img>
+    </div>
+    <div class="list-row" draggable="false">
+      <img class="list-cell" src="images/cell23.png" draggable="true"></img>
+    </div>
+    <div class="list-row" draggable="false">
+      <img class="list-cell" src="images/cell24.png" draggable="true"></img>
+    </div>
+    <div class="list-row" draggable="false">
+      <img class="list-cell" src="images/cell25.png" draggable="true"></img>
+    </div>
+    <div class="list-row" draggable="false">
+      <img class="list-cell" src="images/cell26.png" draggable="true"></img>
     </div>
   </div>
 
