--- a/index.html
+++ b/index.html
@@ -10,61 +10,61 @@
 <body style="background-color:#0000FF">
   <div class="grid-container" draggable="false">
     <div class="grid-row" draggable="false">
-      <img class="grid-cell" src="images/cell01.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell02.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell03.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell04.png" draggable="true"></img>
+      <img class="grid-cell" src="images/stark_arya.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/stark_catelyn.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/stark_ned.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/stark_robb.jpg" draggable="true"></img>
     </div>
     <div class="grid-row" draggable="false">
-      <img class="grid-cell" src="images/cell05.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell06.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell07.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell08.png" draggable="true"></img>
+      <img class="grid-cell" src="images/lannister_jaime.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/snow_jon.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/stark_sansa.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/targaryen_daenerys.jpg" draggable="true"></img>
     </div>
     <div class="grid-row" draggable="false">
-      <img class="grid-cell" src="images/cell09.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell10.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell11.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell12.png" draggable="true"></img>
+      <img class="grid-cell" src="images/lannister_tywin.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/baratheon_robert.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/lannister_cersei.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/tyrell_margaery.jpg" draggable="true"></img>
     </div>
     <div class="grid-row" draggable="false">
-      <img class="grid-cell" src="images/cell13.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell14.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell15.png" draggable="true"></img>
-      <img class="grid-cell" src="images/cell16.png" draggable="true"></img>
+      <img class="grid-cell" src="images/aguilar_christopher.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/aguilar_edward.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/aguilar_reynolds.jpg" draggable="true"></img>
+      <img class="grid-cell" src="images/zack_and_aubrey.jpg" draggable="true"></img>
     </div>
   </div>
 
   <div class="list-container" draggable="false">
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell17.png" draggable="true"></img>
+      <img class="list-cell" src="images/lannister_tyrion.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell18.png" draggable="true"></img>
+      <img class="list-cell" src="images/brienne_of_tarth.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell19.png" draggable="true"></img>
+      <img class="list-cell" src="images/ygritte.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell20.png" draggable="true"></img>
+      <img class="list-cell" src="images/melisandre.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell21.png" draggable="true"></img>
+      <img class="list-cell" src="images/clegane_sandor.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell22.png" draggable="true"></img>
+      <img class="list-cell" src="images/khal_drogo.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell23.png" draggable="true"></img>
+      <img class="list-cell" src="images/null_cell.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell24.png" draggable="true"></img>
+      <img class="list-cell" src="images/null_cell.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell25.png" draggable="true"></img>
+      <img class="list-cell" src="images/null_cell.jpg" draggable="true"></img>
     </div>
     <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/cell26.png" draggable="true"></img>
+      <img class="list-cell" src="images/null_cell.jpg" draggable="true"></img>
     </div>
   </div>
 
