restructured cell organization, added character images, updated style sheet

--- a/index.html
+++ b/index.html
@@ -8,66 +8,144 @@
     <img src="images/AGoTBanner.jpg" alt="My test image">
 </head>
 <body style="background-color:#0000FF">
-  <div class="grid-container" draggable="false">
-    <div class="grid-row" draggable="false">
-      <img class="grid-cell" src="images/stark_arya.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/stark_catelyn.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/stark_ned.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/stark_robb.jpg" draggable="true"></img>
+    <div class="grid-container" draggable="false">
+        <div class="grid-row" draggable="false">
+            <div class="grid-cell" draggable="true">
+                <img src="images/stark_arya.jpg" class="char_img">
+                <div class="char_name"> Arya Stark </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/stark_catelyn.jpg" class="char_img">
+                <div class="char_name"> Catelyn Stark </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/stark_ned.jpg" class="char_img">
+                <div class="char_name"> Ned Stark </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/stark_robb.jpg" class="char_img">
+                <div class="char_name"> Robb Stark </div>
+            </div>
+        </div>
+        <div class="grid-row" draggable="false">
+            <div class="grid-cell" draggable="true">
+                <img src="images/lannister_jaime.jpg" class="char_img">
+                <div class="char_name"> Jaime Lannister </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/snow_jon.jpg" class="char_img">
+                <div class="char_name"> Jon Snow </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/stark_sansa.jpg" class="char_img">
+                <div class="char_name"> Sansa Stark </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/targaryen_daenerys.jpg" class="char_img">
+                <div class="char_name"> Daenerys Targaryen </div>
+            </div>
+        </div>
+        <div class="grid-row" draggable="false">
+            <div class="grid-cell" draggable="true">
+                <img src="images/lannister_tywin.jpg" class="char_img">
+                <div class="char_name"> Tywin Lannister </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/baratheon_robert.jpg" class="char_img">
+                <div class="char_name"> Robert Baratheon </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/lannister_cersei.jpg" class="char_img">
+                <div class="char_name"> Cersei Lannister </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/tyrell_margaery.jpg" class="char_img">
+                <div class="char_name"> Margaery Tyrell </div>
+            </div>
+        </div>
+        <div class="grid-row" draggable="false">
+            <div class="grid-cell" draggable="true">
+                <img src="images/aguilar_christopher.jpg" class="char_img">
+                <div class="char_name"> Christopher Aguilar </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/aguilar_edward.jpg" class="char_img">
+                <div class="char_name"> Edward Aguilar </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/aguilar_reynolds.jpg" class="char_img">
+                <div class="char_name"> Reynolds Aguilar </div>
+            </div>
+            <div class="grid-cell" draggable="true">
+                <img src="images/zack_and_aubrey.jpg" class="char_img">
+                <div class="char_name"> Zack and Aubrey </div>
+            </div>
+        </div>
     </div>
-    <div class="grid-row" draggable="false">
-      <img class="grid-cell" src="images/lannister_jaime.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/snow_jon.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/stark_sansa.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/targaryen_daenerys.jpg" draggable="true"></img>
-    </div>
-    <div class="grid-row" draggable="false">
-      <img class="grid-cell" src="images/lannister_tywin.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/baratheon_robert.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/lannister_cersei.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/tyrell_margaery.jpg" draggable="true"></img>
-    </div>
-    <div class="grid-row" draggable="false">
-      <img class="grid-cell" src="images/aguilar_christopher.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/aguilar_edward.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/aguilar_reynolds.jpg" draggable="true"></img>
-      <img class="grid-cell" src="images/zack_and_aubrey.jpg" draggable="true"></img>
-    </div>
-  </div>
 
-  <div class="list-container" draggable="false">
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/lannister_tyrion.jpg" draggable="true"></img>
+    <div class="list-container" draggable="false">
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/lannister_tyrion.jpg" class="char_img">
+                <div class="char_name"> Tyrion Lannister </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/brienne_of_tarth.jpg" class="char_img">
+                <div class="char_name"> Brienne of Tarth </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/ygritte.jpg" class="char_img">
+                <div class="char_name"> Ygritte </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/melisandre.jpg" class="char_img">
+                <div class="char_name"> Melisandre </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/clegane_sandor.jpg" class="char_img">
+                <div class="char_name"> Sandor Clegane </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/khal_drogo.jpg" class="char_img">
+                <div class="char_name"> Khal Drogo </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/null_cell.jpg" class="char_img">
+                <div class="char_name"> null_cell </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/null_cell.jpg" class="char_img">
+                <div class="char_name"> null_cell </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/null_cell.jpg" class="char_img">
+                <div class="char_name"> null_cell </div>
+            </div>
+        </div>
+        <div class="list-row" draggable="false">
+            <div class="list-cell" draggable="true">
+                <img src="images/null_cell.jpg" class="char_img">
+                <div class="char_name"> null_cell </div>
+            </div>
+        </div>
     </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/brienne_of_tarth.jpg" draggable="true"></img>
-    </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/ygritte.jpg" draggable="true"></img>
-    </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/melisandre.jpg" draggable="true"></img>
-    </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/clegane_sandor.jpg" draggable="true"></img>
-    </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/khal_drogo.jpg" draggable="true"></img>
-    </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/null_cell.jpg" draggable="true"></img>
-    </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/null_cell.jpg" draggable="true"></img>
-    </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/null_cell.jpg" draggable="true"></img>
-    </div>
-    <div class="list-row" draggable="false">
-      <img class="list-cell" src="images/null_cell.jpg" draggable="true"></img>
-    </div>
-  </div>
 
-<!-- <p><a href="index.html" id="reload">Click here</a> to create a new card</p> -->
+    <!-- <p><a href="index.html" id="reload">Click here</a> to create a new card</p> -->
 </body>
 </html>
